--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,21 +8,47 @@
 
   &__contents {
     @include block;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
     gap: 2rem;
 
     @include mq {
-      flex-wrap: wrap;
+      display: block;
     }
   }
 
   &__menu {
-    flex: 0 0 12rem;
+    &:nth-child(1) {
+      grid-area: 1 / 1 / 3 / 2;
+    }
+
+    &:nth-child(2) {
+      grid-area: 1 / 2 / 3 / 3;
+    }
+
+    &:nth-child(3) {
+      grid-area: 1 / 3 / 3 / 4;
+    }
+
+    &:nth-child(4) {
+      grid-area: 1 / 4 / 3 / 5;
+    }
+
+    &:nth-child(5) {
+      grid-area: 1 / 5 / 2 / 6;
+    }
+
+    &:nth-child(6) {
+      grid-area: 2 / 5 / 3 / 6;
+    }
 
     @include mq {
       flex: 0 0 100%;
+      &:not(:first-child) {
+        margin-top: 0.5rem;
+      }
     }
   }
 
@@ -55,12 +81,31 @@
 
   &__menu-list {
     margin-top: 0.25rem;
+
+    @include mq {
+      padding-top: 0.75rem;
+      padding-bottom: 1rem;
+    }
   }
 
   &__menu-item {
+    font-weight: 300;
+
+    &:not(:first-child) {
+      margin-top: 0.5rem;
+    }
+
     a {
       text-decoration: underline;
       color: $txt-color-white;
+    }
+  }
+
+  &__menu-logo {
+    max-width: 154px;
+
+    img {
+      max-width: 100%;
     }
   }
 
@@ -83,7 +128,7 @@
 
     @include mq {
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.5rem;
     }
   }
 
