--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -3,7 +3,7 @@
 .lower-index {
   // MainVisual
   .mainvisual {
-    height: 32rem;
+    height: 600px;
     overflow: hidden;
     position: relative;
 
@@ -91,6 +91,7 @@
 
     &__heading {
       font-size: 48px;
+      font-family: $title-family;
       line-height: 1.5;
 
       @include mq {
@@ -227,6 +228,7 @@
       padding-top: 1rem;
       padding-bottom: 1rem;
       font-size: 28px;
+      font-family: $title-family;
       color: $primary-color;
       white-space: nowrap;
 
@@ -335,11 +337,12 @@
     &__title {
       display: flex;
       align-items: center;
-      padding-left: 2rem;
-      padding-right: 2rem;
+      padding-left: 3.25rem;
+      padding-right: 3.25rem;
       border-bottom: 1px solid $border-color;
       font-size: 24px;
-      font-weight: bold;
+      // font-weight: bold;
+      font-family: $title-family;
       transition: 0.2s;
 
       @include mq {
@@ -373,8 +376,8 @@
       flex-wrap: wrap;
       gap: 0 1rem;
       padding-top: 1rem;
-      padding-left: 2rem;
-      padding-right: 2rem;
+      padding-left: 3.25rem;
+      padding-right: 3.25rem;
     }
 
     &__tag {
@@ -499,6 +502,8 @@
     }
 
     &__text {
+      font-family: $title-family;
+
       @include mq {
         line-height: 1.5;
       }
@@ -769,7 +774,8 @@
       display: flex;
       align-items: center;
       min-width: 50%;
-      padding: 1.25rem 1rem;
+      // padding: 1.25rem 1rem;
+      padding: 1.25rem 0;
 
       @include mq {
         flex: 0 0 100%;
@@ -857,7 +863,19 @@
   .work-skill {
     margin-top: 2rem;
 
+    &__wrap {
+      display: flex;
+      gap: 28px;
+
+      @include mq {
+        flex-wrap: wrap;
+        gap: 0;
+      }
+    }
+
     &__list {
+      flex: 1 1 auto;
+      max-width: 100%;
       margin-top: 1.25rem;
     }
 
@@ -908,6 +926,15 @@
 
       .c-evaluation {
         flex: 1 1 auto;
+      }
+    }
+
+    &__tags {
+      padding-top: 18px;
+      flex-direction: column;
+
+      .c-tags__link {
+        display: inline-block;
       }
     }
   }
