--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,3 +18,8 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/index';
+@import 'layout/userlogin';
+@import 'layout/usercomplete';
+@import 'layout/userinfo';
+@import 'layout/userresume';
+@import 'layout/userspecialities';
