--- a/sass/foundation/_mixin.scss
+++ b/sass/foundation/_mixin.scss
@@ -13,31 +13,22 @@ $sixth-color: #74b666;
 $txt-color: #707070;
 $txt-color-white: #fff;
 $link-color: $primary-color;
-<<<<<<< HEAD
 $border-color: #BDC0BA;
 $border-color-300: #CECDCD;
 $bg-color: #EFEFEF;
 $bg-color-red: #FCF3F3;
 $white-color: #fff;
 $black-color: #000;
-=======
-$border-color: #bdc0ba;
-$border-color-300: #cecdcd;
-$bg-color: #efefef;
-$bg-color-red: #fcf3f3;
->>>>>>> origin/main
+$fourth-h-color:#1e759b;
+$primary-h-color: #ae2012;
 
 /* ============================================
 // FONT Setting
 // ==========================================*/
 
-<<<<<<< HEAD
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Shippori+Antique+B1&display=swap');
 
 $default-family: OSAKA, 蘭亭黑-繁, Meiryo, sans-serif;
-=======
-$default-family: "Noto Sans TC", sans-serif;
->>>>>>> origin/main
 $default-family-ie: "メイリオ", Meiryo, sans-serif;
 $secondary-family: 'Noto Sans TC', sans-serif;
 $secondary-family-ie: 'Shippori Antique B1', sans-serif;
