--- a/sass/layout/_userinfo.scss
+++ b/sass/layout/_userinfo.scss
@@ -1,81 +1,23 @@
 @charset 'utf-8';
 
 .account-info-body{
-    width: 100%;
+    max-width: 1333px;
+    margin: auto;
 }
 
-.free-membership{
-    margin-left: 10%;
+// Title
+.account-info-title{
     margin-top: 80px;
     font-family: $secondary-family-ie;
     font-size: 35px;
     color: $black-color;
 }
 
-.account-info{
-    margin-top: 50px;
-    background-color: $white-color;
-    color: $black-color;
-    margin-left: 10%;
-    margin-right: 45%;
-    margin-bottom: 100px;
-    border-radius: 20px;
-    font-size: 20px;
-    font-family: $secondary-family-ie;
-    .form-account-info{
-        margin-left: 10%;
-        margin-right: 10%;
-            label{
-                width: 100px;
-                margin-top: 50px
-            }
-    }
-    .submit-button{
-        color: $white-color;
-        text-align: center;
-        button{
-            font-size: 30px;
-            background-color: $txt-color;
-            margin-left: 0;
-            margin-bottom: 100px;
-            padding: 20px 20%;
-        }
-        button:hover{
-            background-color: $primary-color;
-        }
-    }
-}
-
-input.account-info-inputs{
-    border: solid 0.1px $border-color;
-    border-radius: 5px;
-    margin-left: 20%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-.accountAgreement{
-    margin-left: 5%;
-    margin-right: 5%;
-    text-align: center;
-    color: $border-color;
-    margin-bottom: 50px;
-    margin-top: 50px;
-    font-size: 0.7em;
-}
-
-input.accountAgreement-checkbox{
-    border: solid $border-color;
-    border-radius: 2px;
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-}
+// yellow-box
 .attention{
     display: flex;
     justify-content: flex-end;
-    margin-top: -1300px;
-    margin-right: 10%;
+    margin-top: 20px;
     .yellow-box{
         background-color: rgba(244,173,37,0.2);
         color: $black-color;
@@ -95,24 +37,32 @@ input.accountAgreement-checkbox{
     }
 }
 
+
+//white-box steps
 .steps{
     display: flex;
     justify-content: flex-end;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-right: 10%;
+    margin-top: 200px;
+    font-family: $secondary-family-ie;
     .white-box{
         width: 400px;
         height: 800px;
         background-color: $white-color;
         border-radius: 20px;
-        text-align: center;
         .white-box-contents{
             margin: auto 50px;
             p{
-                font-size: 25px;
+                font-size:1.5em;
                 color: $black-color;
                 line-height: 5;
+            }
+            .triangle-bottom {
+                display: inline-block;
+                border-style: solid;
+                border-width: 20px 10px 0 10px;
+                border-color: $border-color transparent transparent transparent;
+                margin-left: 140px;
+                margin-top: 10px;
             }
             span{
                 background-color: $primary-color;
@@ -125,3 +75,491 @@ input.accountAgreement-checkbox{
         }
     }
 }
+
+
+//TODO : profileをeditできるボタンindexにつくる
+
+// whitebox Account-information
+.account-info{
+    background-color: $white-color;
+    color: $black-color;
+    margin-bottom: 50px;
+    margin-top: -1200px;
+    width: 800px;
+    padding: 20px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-family: $secondary-family-ie;
+    .form-account-info{
+        margin-left: 5%;
+        margin-right: 10%;
+        a{
+            text-decoration: underline 1px ;
+        }
+        table{
+            width: 100%;
+        }
+        .account-info-input{
+            label{
+                font-size: 1em;
+            }
+            .icon-required::after {
+                content: "必須";
+                border: solid 2px $primary-color;
+                color: $primary-color;
+                font-size: 0.7em;
+                min-width: 10px;
+                padding-left:7px;
+                padding-right:7px;
+                padding-bottom: 1px;
+                margin: 0px 5px;
+                line-height: 1;
+                vertical-align: middle;
+                white-space: nowrap;
+                text-align: center;
+                border-radius: 10px;
+                display: inline-block;
+            }   
+            input{
+                padding: 1em;
+                border: solid 0.1px $border-color;
+                border-radius: 5px;
+                margin-left: 20%;
+                margin-right: 20%;
+                margin-top: 30px;
+                margin-bottom: 30px;
+            }      
+        }
+    }
+    .submit-button{
+        color: $white-color;
+        text-align: center;
+        button{
+            font-size: 30px;
+            background-color: $primary-color;
+            margin-left: 0;
+            margin-bottom: 20px;
+            padding: 20px 20%;
+            border-radius: 20px;
+        }
+        button:hover{
+            background-color: $primary-h-color;
+        }
+    }
+    .backtologin{
+        color: $border-color;
+        font-size: 0.8em;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+}
+
+// accordion-menu
+.accordion-menu{
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 50px;
+    font-family: $secondary-family-ie;
+    &__area{
+        display: block;
+        details{
+            width: 400px;
+            summary {
+                display: flex;
+                justify-content: space-between;
+                border: solid 2px $border-color;
+                padding: 10px;
+                font-size: 1.5em;
+                color: $black-color;
+                cursor: pointer;
+                img{
+                    width: 30px;
+                }
+                img:after{
+                    transform: rotate(180deg);
+                }
+            }
+            summary.register-base-top{
+                border-bottom: none;
+            }
+            .resister-base-contents{
+                border-right: solid 2px $border-color;
+                border-left: solid 2px $border-color;
+            }
+        }
+    }
+}
+
+// check-box settings
+.agreement{
+    font-size: 0.8em;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.check-test {
+    display: none;
+}
+
+.check-test + span {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 0.2em 0;
+    padding: 0 0 0 1.2em;
+    position: relative;
+    color: $border-color;
+}
+
+.check-test + span::before {
+    -webkit-transform: translateY(-50%);
+    background: #fff;
+    border: 1px solid $border-color;
+    border-radius: 2px;
+    content: "";
+    display: block;
+    height: 1.5em;
+    left: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1.5em;
+    font-size: 0.5em;
+}
+
+.check-test + span::after {
+    -webkit-transform: translateY(-50%) rotate(-45deg);
+    border-bottom: 3px solid $primary-color;
+    border-left: 3px solid $primary-color;
+    content: "";
+    display: block;
+    height: 0.3em;
+    left: 0;
+    margin-top: -0.2em;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%) rotate(-45deg);
+    transition: all 0.3s ease 0s;
+    width: 1em;
+}
+
+.check-test:checked + span::after {
+    opacity: 1;
+}
+
+// tablet settings
+@include mq(tab) {
+    .account-info-title{
+        margin-left: 10%;
+        margin-top: 30px;
+        font-size: 30px;
+    }
+
+    // yellow-box
+    .attention{
+        margin-top: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        .yellow-box{
+            background-color: rgba(244,173,37,0.2);
+            color: $black-color;
+            border-radius: 20px;
+            width: auto;
+            height: 150px;
+            padding: 20px;
+            font-family: $secondary-family-ie;
+            img{
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 5px;
+            }
+        }
+    }
+    //white-box steps
+    .steps{
+        display: block;
+        margin-top: 20px;
+        margin-bottom: 40px;
+        margin-left: 10%;
+        margin-right: 10%;
+        .white-box{
+            width: auto;
+            height: auto;
+            background-color: $white-color;
+            border-radius: 20px;
+            .white-box-contents{
+                margin: 15px auto;
+                padding: 15px 20%;
+                p{
+                    font-size: 20px;
+                    color: $black-color;
+                    line-height: 3;
+                }
+                .triangle-bottom{
+                    margin-left: 45%;
+                }
+                span{
+                    background-color: $primary-color;
+                    color: $white-color;
+                    border-radius: 30px;
+                    padding: 5px;
+                    margin-right: 10px;
+                    letter-spacing: 0.2em;
+                }
+            }
+        }
+    }
+
+    // whitebox info
+    .account-info{        
+        margin-top: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 30px;
+        padding: 5px 1%;
+        border-radius: 30px;
+        font-size: 15px;
+        width: auto;
+        .form-account-info{
+            margin-left: 5%;
+            margin-right: 5%;
+            .account-info-input{
+                label{
+                    font-size: 1em;
+                }
+                .icon-required{
+                    width: 100px;
+                }
+                .icon-required::after {
+                    content: "必須";
+                    border: solid 1px $primary-color;
+                    color: $primary-color;
+                    min-width: 5px;
+                    padding: 1px 3px 3px 3px;
+                    margin: 0px 2px 4px 2px;
+                    line-height: 1;
+                    vertical-align: middle;
+                    white-space: nowrap;
+                    text-align: center;
+                    border-radius: 10px;
+                    display: inline-block;
+                    margin-right: 10px;
+                }  
+                input{
+                    padding: 0.3em;
+                    border: solid 0.1px $border-color;
+                    border-radius: 5px;
+                    margin: 10px 5%;
+                    width: 300px;
+                }
+            }
+        }
+        .submit-button{
+            color: $white-color;
+            text-align: center;
+            button{
+                font-size: 20px;
+                margin-left: 0;
+                margin-bottom: 20px;
+                padding: 20px 20%;
+            }
+        }
+        .backtologin{
+            color: $border-color;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    }
+    .accordion-menu{
+        display: block;
+        justify-content: center;
+        margin-bottom: 50px;
+        &__area{
+            details{
+                width: auto;
+                margin-right: 10%;
+                margin-left: 10%;
+                summary {
+                    font-size: 1.2em;
+                    img{
+                        width: 25px;
+                    }
+                }
+            }
+        }
+    }   
+}
+
+
+//smartphone settings
+@include mq(sp) {
+    .account-info-body{
+        width: 100%;
+    }
+    .account-info-title{
+        margin-left: 5%;
+        margin-top: 20px;
+        font-size: 20px;
+    }
+
+    // yellow-box
+    .attention{
+        margin-top: 10px;
+        margin-left: 5%;
+        margin-right: 5%;
+        .yellow-box{
+            background-color: rgba(244,173,37,0.2);
+            color: $black-color;
+            border-radius: 20px;
+            width: auto;
+            height: 150px;
+            padding: 20px;
+            font-family: $secondary-family-ie;
+            img{
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 5px;
+            }
+        }
+    }
+    //white-box steps
+    .steps{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 5%;
+        margin-right: 5%;
+        .white-box{
+            width: auto;
+            height: auto;
+            background-color: $white-color;
+            border-radius: 20px;
+            .white-box-contents{
+                margin: 15px auto;
+                padding: 15px 15%;
+                p{
+                    font-size: 20px;
+                    color: $black-color;
+                    line-height: 3;
+                }
+                .triangle-bottom{
+                    margin-left: 45%;
+                }
+                span{
+                    background-color: $primary-color;
+                    color: $white-color;
+                    border-radius: 30px;
+                    padding: 5px;
+                    margin-right: 10px;
+                    letter-spacing: 0.2em;
+                }
+            }
+        }
+    }
+
+    // whitebox info
+    .account-info{        
+        margin-top: 10px;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 20px;
+        padding: 5px 1%;
+        border-radius: 10px;
+        font-size: 15px;
+        width: auto;
+        .form-account-info{
+            margin-left: 5%;
+            margin-right: 5%;
+            .account-info-input{
+                label{
+                    font-size: 1em;
+                }
+                .icon-required{
+                    width: 100%;
+                }
+                .icon-required::after {
+                    content: "必須";
+                    border: solid 1px $primary-color;
+                    color: $primary-color;
+                    font-size: 0.8em;
+                    min-width: 5px;
+                    padding: 1px 3px 3px 3px;
+                    margin: 0px 2px 4px 2px;
+                    line-height: 1;
+                    vertical-align: middle;
+                    white-space: nowrap;
+                    text-align: center;
+                    border-radius: 10px;
+                    display: inline-block;
+                }  
+                input{
+                    padding: 0.3em;
+                    border: solid 0.1px $border-color;
+                    border-radius: 5px;
+                    margin: 10px 5%;
+                    font-size: 1em;
+                    width: 240px;
+                }
+            }
+        }
+        .submit-button{
+            color: $white-color;
+            text-align: center;
+            button{
+                font-size: 20px;
+                margin-left: 0;
+                margin-bottom: 20px;
+                padding: 20px 20%;
+            }
+        }
+        .backtologin{
+            color: $border-color;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    }
+
+    .accordion-menu{
+        display: block;
+        justify-content: center;
+        margin-bottom: 40px;
+        &__area{
+            details{
+                width: auto;
+                margin-right: 5%;
+                margin-left: 5%;
+                summary {
+                    font-size: 1.2em;
+                    img{
+                        width: 25px;
+                    }
+                }
+            }
+        }
+    }  
+
+
+
+    
+    .accountAgreement{
+        text-align: center;
+        color: $border-color;
+        margin-bottom: 50px;
+        margin-top: 50px;
+        font-size: 1em;
+    }
+    
+    input.accountAgreement-checkbox{
+        border: solid $border-color;
+        border-radius: 2px;
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+}
+
