--- a/sass/object/_module.scss
+++ b/sass/object/_module.scss
@@ -475,6 +475,20 @@
       z-index: 2;
     }
   }
+  input[type="radio"]:checked + &__rank::before{
+    content: "";
+    box-sizing: border-box;
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    margin: 0 auto;
+    background: $white-color;
+    border: 2px solid $primary-color;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    transition: 0.3s;
+  }
 }
 
 // Tags
