update:passwordリセット用ページデザイン追加

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,4 +23,5 @@
 @import 'layout/userinfo';
 @import 'layout/userresume';
 @import 'layout/userspecialities';
-@import 'layout/mypageinfo'
+@import 'layout/mypageinfo';
+@import 'layout/password';
