--- a/sass/layout/_password.scss
+++ b/sass/layout/_password.scss
@@ -6,14 +6,16 @@
 }
 
 .confirm-body-box{
+    // TODO 省略可能 @shin
     margin-top: 100px;
     margin-left: 25%;
     margin-right: 25%;
-    padding: 30px 5%; 
+    padding: 30px 5%;
     font-size: 20px;
     background-color: $white-color;
     margin-bottom: 360px;
     @include mq(tab){
+        // TODO 省略可能 @shin
         margin-top: 50px;
         margin-left: 15%;
         margin-right: 15%;
@@ -22,6 +24,7 @@
         margin-bottom: 50px;
     }
     @include mq(sp){
+        // TODO 省略可能 @shin
         margin-top: 50px;
         margin-left: 10%;
         margin-right: 10%;
