--- a/sass/layout/_userlogin.scss
+++ b/sass/layout/_userlogin.scss
@@ -52,6 +52,7 @@
         .c-button__link{
             font-size: 25px;
             color: $white-color;
+            // TODO 同一のプロパティがある @shin
             margin-top: 50px;
             background-color: $primary-color;
             justify-content: center;
