--- a/sass/layout/_userinfo.scss
+++ b/sass/layout/_userinfo.scss
@@ -111,7 +111,7 @@
                 padding-right:7px;
                 padding-bottom: 1px;
                 // TODO: 0pxは冗長な記述 @shin
-                margin: 0px 5px;
+                margin: 0 5px;
                 line-height: 1;
                 vertical-align: middle;
                 white-space: nowrap;
