fix: editページのリンク有効化

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,4 +25,4 @@
 @import 'layout/userspecialities';
 @import 'layout/mypageinfo';
 @import 'layout/password';
-@import 'layout/list'
+@import 'layout/list';
