--- a/sass/layout/_userresume.scss
+++ b/sass/layout/_userresume.scss
@@ -74,8 +74,15 @@ textarea{
                         color: $black-color;
                         width: 250px;
                         height: 300px;
-                        line-height: 300px;
-                        background-color: $border-color-300;
+                        background-color: #e8e8e8;
+                        position: relative;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        .camera-icon{
+                            width: 50px;
+                            height: 50px;
+                        }
                         img{
                             text-align: center;
                             width: 250px;
