update: edit infoの修正

--- a/sass/layout/_mypageinfo.scss
+++ b/sass/layout/_mypageinfo.scss
@@ -3,13 +3,12 @@
 .account-info-edit{
     background-color: $white-color;
     color: $black-color;
-    margin-bottom: 50px;
-    margin-top: -200px;
     width: 800px;
     padding: 20px;
     border-radius: 20px;
     font-size: 20px;
     font-family: $secondary-family-ie;
+    margin: 100px auto 100px auto;
     .form-account-info{
         margin-left: 5%;
         margin-right: 10%;
