--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -66,7 +66,7 @@
         width: 1.5rem;
         height: 0.75rem;
         margin-left: auto;
-        background: url(../img/arrow_down_white.svg) no-repeat center center /
+        background: url(/img/arrow_down_white.svg) no-repeat center center /
           contain;
         transition: 0.2s;
       }
